# sphinxcontrib-gtagjs

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
doc/: conf.py  index.rst  requirements.txt
sphinxcontrib/: gtagjs.py
sphinxcontrib/gtagjs/: __init__.py
sphinxcontrib/gtagjs/_static/: sphinxcontrib.gtag.js_t
