[bumpversion]
current_version = 0.0.0
commit = False
tag = False

[metadata]
name = sphinxcontrib-gtagjs
description = Sphinx extension to render global site tag of Google.
url = https://github.com/attakei/sphinxcontrib-gtagjs
author = attakei
author_email = attakei@gmail.com
license_file = LICENSE
long_description = file: README.rst
classifier = 
	Development Status :: 3 - Alpha
	Framework :: Sphinx
	Framework :: Sphinx :: Extension
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Topic :: Documentation :: Sphinx

[options]
packages = find:
namespace_packages =
	sphinxcontrib
install_requires =
	Sphinx

[options.extras_require]
packaging = 
	bumpversion
linting = 
	doc8
    pygments
	black
	flake8

[options.packages.find]
exclude = 
	docs
	demo
	tools

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:sphinxcontrib/gtagjs.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
